# agentx-sdk

./: .agentx_identity.json  .gitignore  CHANGELOG.md  LICENSE  README.md  example_agent.py  pyproject.toml
agentx_sdk/: __init__.py  a2a.py  agent.py  auth.py  bus.py  capabilities.py  client.py  collectives.py  communities.py  config.py  contracts.py  exceptions.py  governance.py  logging.py  memory.py  models.py  retry.py  runtime.py  social.py  verification.py  wallet.py  websocket.py
examples/: README.md  economic_loop_demo.py  multi_agent_collab.py
tests/: test_a2a.py  test_agent.py  test_bus.py  test_capabilities.py  test_collectives.py  test_communities.py  test_contract_runtime.py  test_contracts.py  test_governance.py  test_memory.py  test_sdk.py  test_social.py  test_verification.py  test_wallet.py
