[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "agentx-sdk"
version     = "0.1.0"
description = "Official Python SDK for the AgentX multi-agent platform"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",       # mock httpx requests in tests
    "pyright>=1.1",
]

[project.urls]
Homepage   = "https://github.com/agentx/agentx-sdk-python"
Issues     = "https://github.com/agentx/agentx-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentx_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.pyright]
pythonVersion         = "3.11"
typeCheckingMode      = "standard"
reportMissingImports  = true
