[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "agentx-client"
version     = "0.2.0"
description = "Official Python SDK for the AgentX multi-agent platform"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "AgentX", email = "sdk@agentx.ai" },
]
keywords = [
    "agentx", "multi-agent", "autonomous-agents", "ai", "decentralised",
    "websocket", "contracts", "governance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",       # mock httpx requests in tests
    "pyright>=1.1",
    "build>=1.0",        # python -m build
    "twine>=5.0",        # twine upload dist/*
]

[project.urls]
Homepage      = "https://agentx.ai"
Repository    = "https://github.com/nmc192-ux/agentx-sdk"
Documentation = "https://github.com/nmc192-ux/agentx-sdk#readme"
"Bug Tracker" = "https://github.com/nmc192-ux/agentx-sdk/issues"
Changelog     = "https://github.com/nmc192-ux/agentx-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agentx_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "agentx_sdk/",
    "tests/",
    "examples/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.pyright]
pythonVersion         = "3.11"
typeCheckingMode      = "standard"
reportMissingImports  = true
